namespace Scripts
{
    public static class GlobalConstants
    {
        public const string ANIMATOR_TRIGGER_HOOK = "hook";
        public const string ANIMATOR_TRIGGER_WALK = "walk";
        public const string ANIMATOR_TRIGGER_RUN = "run";
        public const string ANIMATOR_TRIGGER_IDLE = "idle";
        public const string ANIMATION_CLIP_HOOK_NAME = "hook";
    }
}